entrga do modulo parcelamentos

--- a/src/app/pages/agregados/agregados.component.scss
+++ b/src/app/pages/agregados/agregados.component.scss
@@ -42,20 +42,6 @@
 
 }
 
-.refresh {
-  margin-left: 5px;
-cursor:pointer; }
-
-
-example-icon {
-  padding: 0 14px;
-  cursor: pointer;
-
+mat-form-field {
+  margin-right: 12px;
 }
-.example-spacer {
-  flex: 1 1 auto;
-
-}
-
-
-
