--- a/src/app/pages/dsh/dsh.component.html
+++ b/src/app/pages/dsh/dsh.component.html
@@ -56,7 +56,7 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="cod">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Codigo </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by cod"> Codigo </th>
       <td mat-cell *matCellDef="let element"> {{element.cod}} </td>
     </ng-container>
 
