--- a/src/app/pages/lancamentos/criar-lancamentos/criar-multiplos/criar-multiplos.component.html
+++ b/src/app/pages/lancamentos/criar-lancamentos/criar-multiplos/criar-multiplos.component.html
@@ -13,8 +13,6 @@
 
     <div class="example-container">
 
-
-     
       <mat-form-field>
         <mat-label>Data do Lançamento</mat-label>
         <input  matInput [matDatepicker]="picker" formControlName="datalcto"/>
@@ -31,7 +29,7 @@
       <mat-form-field class = "descricao_conta">
         <mat-label>Conta Debitada</mat-label>
         <mat-select formControlName="ctadebitada">
-          <mat-option *ngFor="let cat of contas|keyvalue"
+          <mat-option *ngFor="let cat of contas"
            value="{{cat.id}}-{{cat.cod}}-{{cat.conta}}-{{cat.natureza}}-{{cat.enquadramento}}-{{cat.mod_despesa}}">{{cat.conta}}</mat-option>
          </mat-select>
       </mat-form-field>
@@ -43,7 +41,7 @@
       <mat-form-field class = "descricao_conta">
         <mat-label>Conta Creditada</mat-label>
         <mat-select formControlName="ctacreditada">
-          <mat-option *ngFor="let cat of contas|keyvalue"
+          <mat-option *ngFor="let cat of contas"
            value="{{cat.id}}-{{cat.cod}}-{{cat.conta}}-{{cat.natureza}}-{{cat.enquadramento}}-{{cat.mod_despesa}}">{{cat.conta}}</mat-option>
         </mat-select>
       </mat-form-field>
@@ -59,6 +57,11 @@
 
           <button mat-stroked-button color="warn" class="botao" (click)="ResetForm()">LIMPAR</button>
 
+          <button mat-mini-fab (click)="addLesson()">
+            <mat-icon class="add-course-btn">add</mat-icon>
+          </button>
+
+
 
     </div>
     </form>
@@ -68,4 +71,5 @@
 
 
     </mat-card>
+
 
