--- a/src/app/pages/lancamentos/lancamentos.component.scss
+++ b/src/app/pages/lancamentos/lancamentos.component.scss
@@ -59,3 +59,67 @@
   .example-spacer {
     flex: 1 1 auto;
   }
+
+  .refresh {
+    margin-left: 5px;
+  cursor:pointer; }
+
+  .demo-table {
+    width: 100%;
+  }
+
+  .mat-column-demo-position {
+    width: 32px;
+    border-right: 1px solid currentColor;
+    padding-right: 24px;
+    text-align: center;
+  }
+
+  .mat-column-demo-name {
+    padding-left: 16px;
+    font-size: 20px;
+  }
+
+  .mat-column-demo-weight {
+    font-style: italic;
+  }
+
+  .mat-column-demo-symbol {
+    width: 32px;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .saldo{
+    text-align: left;
+    color: white;
+    font-size: medium;
+    background-color: blue;
+
+
+  }
+
+  .saldorodape{
+    text-align: center;
+    color: white;
+    font-size: medium;
+    background-color: blue;
+
+
+  }
+
+  .refresh {
+    margin-left: 5px;
+  cursor:pointer; }
+
+
+  example-icon {
+    padding: 0 14px;
+    cursor: pointer;
+
+  }
+  .example-spacer {
+    flex: 1 1 auto;
+
+  }
+
