--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -18,8 +18,8 @@
       </mat-menu>
 
       <button routerLink="lctos"mat-button>Lançamentos</button>
-      <button mat-button>Agregados</button>
-      <button mat-button>Parcelamentos</button>
+      <button mat-button routerLink="subagregados">Agregados</button>
+      <button mat-button routerLink="parcelamentos">Parcelamentos</button>
       <button mat-button>CDC</button>
       <button mat-button>Sobre</button>
 
