--- a/src/app/pages/lancamentos/lancamentos.component.html
+++ b/src/app/pages/lancamentos/lancamentos.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar class = "saldo">Lançamentos
     <span class="example-spacer"></span>
     <mat-icon >
-    <span class="material-icons example-icon" routerLink="criar-lcto">
+    <span class="material-icons example-icon refresh" routerLink="criar-lcto">
       add
       </span></mat-icon>
 
@@ -17,6 +17,8 @@
   <ng-container matColumnDef="demo-position">
     <th mat-header-cell *matHeaderCellDef> # </th>
     <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
+
+
   </ng-container>
 
   <!-- Name Column -->
@@ -24,12 +26,16 @@
   <ng-container matColumnDef="data">
     <th mat-header-cell *matHeaderCellDef> Data </th>
     <td mat-cell *matCellDef="let element"> {{element.datadolancamento.toDate()| date:'dd/MM/yyyy'}} </td>
+
+
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="cod">
     <th mat-header-cell *matHeaderCellDef> Código </th>
     <td mat-cell *matCellDef="let element"> {{element.cod}} </td>
+
+
     </ng-container>
 
 
@@ -38,22 +44,30 @@
   <ng-container matColumnDef="lancamento">
     <th mat-header-cell *matHeaderCellDef> Descricao </th>
     <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
+
+
   </ng-container>
 
   <ng-container matColumnDef="ctadebitada">
     <th mat-header-cell *matHeaderCellDef> Conta Debitada </th>
     <td mat-cell *matCellDef="let element"> {{element.conta_debitada.contadeb}} </td>
+
+
   </ng-container>
 
   <ng-container matColumnDef="ctacreditada">
     <th mat-header-cell *matHeaderCellDef> Conta Creditada </th>
     <td mat-cell *matCellDef="let element"> {{element.conta_creditada.contacred}} </td>
+
+
   </ng-container>
 
 
   <ng-container matColumnDef="valor">
     <th mat-header-cell *matHeaderCellDef> Valor </th>
     <td mat-cell *matCellDef="let element"> {{element.valor|currency}} </td>
+
+
   </ng-container>
 
 
@@ -61,13 +75,13 @@
   <ng-container matColumnDef="posicao">
     <th mat-header-cell *matHeaderCellDef> Gravado em </th>
     <td mat-cell *matCellDef="let element"> {{element.log.toDate()|date: "dd/MM/yyyy, HH:mm"}} </td>
-    <td mat-footer-cell *matFooterCellDef></td>
+
   </ng-container>
 
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
 
 
 </table>
