--- a/src/app/pages/parcelamentos/parcelamentos.component.html
+++ b/src/app/pages/parcelamentos/parcelamentos.component.html
@@ -1,1 +1,110 @@
-<p>parcelamentos works!</p>
+<mat-card>
+  <mat-toolbar class = "saldo" > Parcelamentos
+    <mat-icon >
+      <span class="material-icons example-icon refresh" (click)="atualizar()">
+        sync
+        </span></mat-icon>
+        <mat-icon >
+          <span class="material-icons example-icon refresh" routerLink="criar-parcelamento">
+            add
+            </span></mat-icon>
+  </mat-toolbar>
+  </mat-card>
+
+
+
+
+
+<mat-card>
+
+  <section class="example-container mat-elevation-z8" tabindex="0">
+<table mat-table [dataSource]="parcelamentos">
+  <!-- Position Column -->
+
+  <!-- Name Column -->
+
+  <ng-container matColumnDef="demo-position">
+    <th mat-header-cell *matHeaderCellDef> # </th>
+    <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="cod">
+    <th mat-header-cell *matHeaderCellDef> Cod </th>
+    <td mat-cell *matCellDef="let element"> {{element.cod}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+
+  <ng-container matColumnDef="datacompra">
+    <th mat-header-cell *matHeaderCellDef> Data da Compra</th>
+    <td mat-cell *matCellDef="let element"> {{element.datadacompra.toDate()|date: 'dd/MM/yyyy'}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+  <ng-container matColumnDef="descricao">
+    <th mat-header-cell *matHeaderCellDef> Descrição</th>
+    <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
+    <td mat-footer-cell *matFooterCellDef>Total</td>
+  </ng-container>
+
+
+
+  <ng-container matColumnDef="cartao">
+    <th mat-header-cell *matHeaderCellDef> Cartão Vinculado </th>
+    <td mat-cell *matCellDef="let element"> {{element.cartaovinculado.nome}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+  <ng-container matColumnDef="origem">
+    <th mat-header-cell *matHeaderCellDef> Origem </th>
+    <td mat-cell *matCellDef="let element"> {{element.origem}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+  <ng-container matColumnDef="qtdeparcelas">
+    <th mat-header-cell *matHeaderCellDef> Qtde de Parcelas </th>
+    <td mat-cell *matCellDef="let element"> {{element.qtdedeparcelas}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+  <ng-container matColumnDef="valorparcelas">
+    <th mat-header-cell *matHeaderCellDef> Valor da Parcela </th>
+    <td mat-cell *matCellDef="let element"> {{element.valorparcela|currency}} </td>
+    <td mat-footer-cell *matFooterCellDef>{{this.totalparcelas|currency}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="parcelasrestantes">
+    <th mat-header-cell *matHeaderCellDef> Parcelas Restantes </th>
+    <td mat-cell *matCellDef="let element"> {{element.parcelasrestantes}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+  <ng-container matColumnDef="ultimaparcela">
+    <th mat-header-cell *matHeaderCellDef> Última Parcela </th>
+    <td mat-cell *matCellDef="let element"> {{element.ultimaparcela.toDate()|date: 'dd/MM/yyyy'}} </td>
+    <td mat-footer-cell *matFooterCellDef></td>
+  </ng-container>
+
+
+  <ng-container matColumnDef="saldorestante">
+    <th mat-header-cell *matHeaderCellDef> Saldo Restante </th>
+    <td mat-cell *matCellDef="let element"> {{element.saldorestante|currency}} </td>
+    <td mat-footer-cell *matFooterCellDef>{{this.totalsdorestante|currency}}</td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+</table>
+</section>
+
+</mat-card>
+
+<mat-card> <mat-card-content class = "saldorodape">Posicao {{this.pos.toDate()|date: 'dd/MM/yyyy, HH:mm'}}</mat-card-content></mat-card>
+
+
+
+
