--- a/src/app/pages/parcelamentos/criar-parcelamento/criar-parcelamento.component.html
+++ b/src/app/pages/parcelamentos/criar-parcelamento/criar-parcelamento.component.html
@@ -80,6 +80,8 @@
           <button mat-stroked-button color="accent" class="botao">GRAVAR</button>
 
           <button mat-stroked-button color="warn" class="botao" (click)="ResetForm()">LIMPAR</button>
+
+          <button mat-stroked-button class="botao" routerLink="parcelamentos">VOLTAR</button>
 </mat-card-content>
 </mat-card>
 
