--- a/src/app/pages/agregados/agregados.component.html
+++ b/src/app/pages/agregados/agregados.component.html
@@ -5,7 +5,7 @@
 <mat-card>
 
   <section class="example-container mat-elevation-z8" tabindex="0">
-<table mat-table [dataSource]="sub">
+<table mat-table [dataSource]="dataSource">
   <!-- Position Column -->
 
   <!-- Name Column -->
@@ -21,7 +21,7 @@
   </ng-container>
 
 
-  
+
   <ng-container matColumnDef="saldo">
     <th mat-header-cell *matHeaderCellDef> Saldo </th>
     <td mat-cell *matCellDef="let element"> {{element.saldo_atual|currency}} </td>
