--- a/src/app/pages/dsh-contas/dsh-contas.component.html
+++ b/src/app/pages/dsh-contas/dsh-contas.component.html
@@ -1,38 +1,56 @@
-<table mat-table [dataSource]="despesas" matSort (matSortChange)="announceSortChange($event)"
-       class="mat-elevation-z8">
+<mat-card>
+  <mat-toolbar>Evolução Despesas <mat-icon >
+    <span class="material-icons example-icon refresh" (click)="atualizar()">
+      sync
+      </span></mat-icon></mat-toolbar><mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Rosa" #input>
+</mat-form-field>
+</mat-card>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="cod">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by cod">
-      Codigo
-    </th>
-    <td mat-cell *matCellDef="let element"> {{element.cod}} </td>
-  </ng-container>
+    <ng-container matColumnDef="cod">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Cod </th>
+      <td mat-cell *matCellDef="let row"> {{row.cod}} </td>
+    </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="conta">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by conta">
-      Conta
-    </th>
-    <td mat-cell *matCellDef="let element"> {{element.conta}} </td>
-  </ng-container>
+    <ng-container matColumnDef="conta">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Conta </th>
+      <td mat-cell *matCellDef="let row"> {{row.conta}} </td>
+    </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="enq">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by enq">
-      Enquadramento
-    </th>
-    <td mat-cell *matCellDef="let element"> {{element.enquadramento}} </td>
-  </ng-container>
+    <ng-container matColumnDef="mod_despesa">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidade </th>
+      <td mat-cell *matCellDef="let row"> {{row.mod_despesa}} </td>
+    </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="objetivo">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by objetivo">
-      Objetivo
-    </th>
-    <td mat-cell *matCellDef="let element"> {{element.gd*diasdec}} </td>
-  </ng-container>
+     <ng-container matColumnDef="objetivo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Objetivo </th>
+      <td mat-cell *matCellDef="let row"> {{row.gd*diasdec|currency}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    <ng-container matColumnDef="saldo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Realizado </th>
+      <td mat-cell *matCellDef="let row"> {{row.saldo|currency}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="atg">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Atingimento </th>
+      <td mat-cell *matCellDef="let row"> {{(row.atg)|percent: '2.2-2'}} </td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="log">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Posição </th>
+      <td mat-cell *matCellDef="let row"> {{row.log.toDate()|date: 'dd/MM/yyyy, HH:mm'}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">Nenhum dado encontrado"{{input.value}}"</td>
+    </tr>
+  </table>
+</div>
