--- a/src/app/pages/dsh-contas/dsh-contas.component.scss
+++ b/src/app/pages/dsh-contas/dsh-contas.component.scss
@@ -5,3 +5,33 @@
 .th.mat-sort-header-sorted {
   color: black;
 }
+
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+
+.mat-column-cod {
+  width: 32px;
+  border-right: 1px solid currentColor;
+  padding-right: 24px;
+  text-align: center;
+}
+
+.mat-column-atg {
+  width: 32px;
+  padding-right: 50px;
+  text-align: center;
+}
+
+.mat-header-cell, mat-cell {
+  justify-content: center;
+}
+
+.refresh {
+  margin-left: 5px;
+cursor:pointer; }
+
+
